--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,87 @@
-.App {
-  text-align: center;
+body {
+  background: #f2f2f2;
+  color: #494c53;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+  box-sizing: border-box;
+  height: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ul {
+  list-style-type: none;
+  padding: 1rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+li {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  margin: 0.2rem;
 }
 
-.App-link {
-  color: #61dafb;
+li:hover {
+  background: #f1d1b5;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1 {
+  text-align: center;
+  color: #f18c8e;
+}
+
+button {
+  border: 0;
+  outline: 0;
+  cursor: pointer;
+}
+
+input {
+  background: #f1d1b5;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
+  padding: 0.5rem;
+  outline: 0;
+  border: 0;
+  flex: 1;
+}
+
+form {
+  border-top: 1px solid;
+  display: flex;
+  margin: 1rem 0;
+  padding-top: 1rem;
+}
+
+form button {
+  margin-left: 1rem;
+  background: #f0b7a4;
+  border: 1px solid #f0b7a4;
+  color: #ffffff;
+}
+
+button span {
+  font-size: 12px;
+}
+
+button:disabled {
+  background: #a9a9a9;
+  border: 1px solid #a9a9a9;
+  color: #dcdcdc;
+}
+
+.styledTodo {
+  box-shadow: 0 0 3px #ccc;
+  background: #fff;
+  width: 80%;
+  max-width: 600px;
+  margin: 0 auto;
+  margin-top: 3rem;
+  padding: 1rem;
+}
+
+.todo-text {
+  cursor: pointer;
+}
+
+.todo-completed {
+  text-decoration: line-through;
 }
